--- a/_config.yml
+++ b/_config.yml
@@ -1,54 +1,36 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+remote_theme				: "mmistakes/minimal-mistakes"
+minimal_mistakes_skin			: "sunrise"
+locale					: "en-US"				
+title					: "Tech Blog"
+title_separator				: "-"
+subtitle				: "Welcome to my tech world!"
+masthead_title				: 
+name					: &name "Steven Liang"
+description				: &description "A flexible Jekyll theme for your blog or site with a minimalist aesthetic."
+url					: https://bullblock.github.io
+baseurl					:
+repository				: "bullblock/bullblock.github.io"
 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: MM
-email:
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
-minimal_mistakes_skin: default
+words_per_minute			: 200
+enable_copy_code_button			: true
+comments				:
+  provider				: false
+  discourse				:
+    server				: https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963		
+
+twitter_username: 
+github_username: bullblock
 search: true
 
-# Build settings
 markdown: kramdown
-remote_theme: mmistakes/minimal-mistakes
-# Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Asia/Singapore
 
 include:
   - _pages
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
-
-# Plugins (previously gems:)
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
@@ -58,34 +40,36 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name   				: "Steven Liang"
+  avatar 				: "/assets/images/bio-photo.jpg"
+  bio					: "A seasoned IT professional with 27 years of deep infrastructure expertise and exceptional troubleshooting capabilities. Holding CKA/CKS certifications, he excels in cloud-native architectures including Kubernetes, Docker, and containerization across AWS, GCP, and Azure platforms. His extensive background spans complex enterprise environments from Unix/Linux administration to modern cloud-native solutions. At Broadcom/VMware, he delivered Level 3 technical support for Tanzu solutions, resolving critical production issues for APJ clients. Steven's proven track record includes architecting scalable infrastructures, managing 24/7 production systems, and leading technical teams through complex migrations and implementations across banking, trading, and enterprise sectors."
+  location				: "Singapore"
+  email					: "steven.liang@pm.me"
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+    - lable				: "Email"
+      icon				: "fas fa-fw fa-envelope-square"
+      url				: "mailto:steven.liang@pm.me" 
+    - label				: "Linkedin"
+      icon				: "fab fa-fw fa-linkedin"
+      url				: "https://www.linkedin.com/in/powellcrack"
+    - label				: "GitHub"
+      icon				: "fab fa-fw fa-github"
+      url				: "https://github.com/bullblock"
+    - label				: "Medium"
+      icon				: "fab fa-fw fa-medium"
+      url				: "https://medium.com/@bullblock"
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+    - label				: "Linkedin"
+      icon				: "fab fa-fw fa-linkedin"
+      url				: "https://www.linkedin.com/in/powellcrack"
+    - label				: "GitHub"
+      icon				: "fab fa-fw fa-github"
+      url				: "https://github.com/bullblock"
+    - label				: "Medium"
+      icon				: "fab fa-fw fa-medium"
+      url				: "https://medium.com/@bullblock"
 
 defaults:
   # _posts
@@ -99,6 +83,7 @@ defaults:
       comments: true
       share: true
       related: true
+      classes: wide
   # _pages
   - scope:
       path: "_pages"
@@ -106,6 +91,7 @@ defaults:
     values:
       layout: single
       author_profile: true
+      classes: wide
 
 category_archive:
   type: liquid
